--- a/cultural/style/ak-style.css
+++ b/cultural/style/ak-style.css
@@ -229,10 +229,10 @@ padding-left:10px;
 
 
 .listing {
-	margin-top:15px;
+	margin-top:55px;
     margin-left: 10px;
     margin-right: 10px;
-	width:510px;
+	width:690px;
     float:right;
 }
 .odd {
@@ -496,6 +496,7 @@ a.secondary:hover { color:#af9a87;text-decoration:underline; }
     float: left;
     width: 200px;
     padding-top:20px;
+    padding-left: 10px;
 }
 
 .leftSidebarInfo h2{
@@ -526,9 +527,13 @@ a.secondary:hover { color:#af9a87;text-decoration:underline; }
 
 .itemsMedia
 {
-    /*float:right;*/
     width:160px;
-    height:160px;
+    margin-left: 10px;
+    -webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-o-border-radius: 4px;
+	-ms-border-radius: 4px;
+	border-radius: 4px;
 }
 .itemDescription
 {
@@ -576,7 +581,7 @@ a.secondary:hover { color:#af9a87;text-decoration:underline; }
 .itemview {
     float: right;
     margin-top: 15px;
-    width: 550px;
+    width: 740px;
 }
 .item-main {
 	margin:0;
@@ -642,6 +647,18 @@ nav.inline-nav a:after {
 	font-size:18px;
 	color:#7b7b7b;
 	margin-bottom:13px;
+}
+
+#itemThumb img
+{
+	width:160px;
+	margin-top: 60px;
+    margin-left: 10px;
+    -webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-o-border-radius: 4px;
+	-ms-border-radius: 4px;
+	border-radius: 4px;
 }
 
 /* flags */
