--- a/edu/style/ak-style.css
+++ b/edu/style/ak-style.css
@@ -229,10 +229,10 @@ padding-left:10px;
 
 
 .listing {
-	margin-top:15px;
+	margin-top:55px;
     margin-left: 10px;
     margin-right: 10px;
-	width:510px;
+	width:690px;
     float:right;
 }
 .odd {
@@ -484,8 +484,7 @@ a.secondary:hover { color:#af9a87;text-decoration:underline; }
 }
 
 
-/**
- ================================================================ITEM VIEW============================================
+/**======================ITEM VIEW============================================
  */
 /*Left Sidebar in item*/
 
@@ -518,7 +517,12 @@ a.secondary:hover { color:#af9a87;text-decoration:underline; }
 {
     /*float:right;*/
     width:160px;
-    height:160px;
+    margin-left: 10px;
+    -webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	-o-border-radius: 4px;
+	-ms-border-radius: 4px;
+	border-radius: 4px;
 }
 .itemDescription
 {
@@ -530,6 +534,21 @@ a.secondary:hover { color:#af9a87;text-decoration:underline; }
 .itemKeywords
 {
     width:550px;
+}
+
+#approved
+{
+	padding:10px 0px;
+}
+#approved img
+{
+	width:70px;
+	float:left;	
+}
+#approved p
+{
+	padding-top: 20px;
+	float:left;	
 }
 
 .itemKeywords li
@@ -565,7 +584,7 @@ a.secondary:hover { color:#af9a87;text-decoration:underline; }
 .itemview {
     float: right;
     margin-top: 15px;
-    width: 550px;
+    width: 740px;
 }
 .item-main {
 	margin:0;
