--- a/_developing/cultural/style/ak-style.css
+++ b/_developing/cultural/style/ak-style.css
@@ -4,24 +4,28 @@
 
 .link_to_general_finder
 {
-	border-bottom:2px solid #583010;
 	text-align:center;
-	width:50%;
+	width:100%;
 	margin:30px auto;
 	font-size: 1.2em;
+
 }
 
 .link_to_general_finder a
 {
 	font-size: 1.2em;
 	text-decoration: none;
-	color:#333;
+	color:#0069be;
+
 }
 
-.link_to_general_finder a:hover
+.link_to_general_finder a img
 {
-	color:#583010;
-}
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-o-border-radius: 5px;
+	-ms-border-radius: 5px;
+	border-radius: 5px;}
 
 /** ===========================================SEARCH BOX ======================================
  */
